--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,5 +1,9 @@
 pipeline {
     agent any
+    tools {
+        maven 'maven-3.8'       // <-- हा नाव Jenkins → Global Tool Config मध्ये दिलेला असावा
+        jdk 'java-17'           // <-- हा पण तिथे define असेल
+    }
 
     environment {
         SERVER_IP    = '13.50.243.27'
